--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.9.0",
+    "gh-pages": "^0.12.0",
     "react-addons-test-utils": "15.4.2",
     "react-scripts": "0.9.0"
   },
@@ -25,6 +26,9 @@
     "coverage": "react-scripts test --env=jsdom --coverage --collectCoverageFrom=src/**/*.jsx --collectCoverageFrom=!src/stories/*.jsx",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
-  }
+    "build-storybook": "build-storybook -s public -o build",
+    "predeploy": "npm run build-storybook",
+    "deploy": "gh-pages -d build"
+  },
+  "homepage": "https://github.com/akiokio/ReactSignupLoginComponent"
 }
