--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: node_js
 node_js:
-  - 4
   - 6
 cache:
   directories:
@@ -8,3 +7,5 @@ cache:
 script:
   - npm test
   - npm run build
+
+after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
