--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@kadira/storybook": "^2.21.0",
+    "coveralls": "^2.11.16",
     "enzyme": "2.7.1",
     "eslint": "3.15.0",
     "eslint-config-airbnb": "14.1.0",
