Update the main file to publish on the npm registry

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ReactSignupLoginComponent",
   "version": "0.1.0",
+  "main": "src/components/ReactSignupLoginComponent.jsx",
   "private": true,
   "engines": {
     "node": ">=7.2.1"
