Update travis build process

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   directories:
     - node_modules
 script:
-  - npm test
-  - npm run build
+  - yarn coverage
+  - yarn build
 
 after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
