--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ cache:
 script:
   - yarn coverage
   - yarn build
+notifications:
+  email: false
 
 after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
