--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-signup-login-component",
-  "version": "0.1.2",
-  "main": "dist/ReactSignupLoginComponent.jsx",
+  "version": "0.1.4",
+  "main": "dist/ReactSignupLoginComponent.js",
   "engines": {
     "node": ">=6.0.0"
   },
@@ -23,7 +23,7 @@
     "normalize.css": "^5.0.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
-    "react-signup-login-component": "^0.1.2"
+    "react-signup-login-component": "^0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
