--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:module": "NODE_ENV=production babel src/components --presets react-app --out-dir dist",
+    "build:module": "NODE_ENV=production babel src/components --presets react-app --out-dir dist --copy-files",
     "test": "react-scripts test --env=jsdom",
     "coverage": "react-scripts test --env=jsdom --coverage --collectCoverageFrom=src/components/*.js",
     "eject": "react-scripts eject",
