--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,21 @@
 language: node_js
-node_js:
-  - 6
 cache:
   directories:
     - node_modules
+notifications:
+  email: false
+node_js:
+  - '8'
+  - '7'
+  - '6'
+before_script:
+  - npm prune
 script:
   - yarn coverage
   - yarn build
-notifications:
-  email: false
-
+after_success:
+  - npm run semantic-release
 after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
+branches:
+  except:
+    - /^v\d+\.\d+\.\d+$/
