--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,14 @@ script:
 after_success:
   - "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
   - build-storybook
-  - yarn deploy
   - npm run semantic-release
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  local_dir: ./storybook-static
+  on:
+    branch: master
