--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build:module": "NODE_ENV=production babel src/components --presets react-app --out-dir dist --copy-files",
+    "build:module": "NODE_ENV=production babel src/components --presets react-app --out-dir dist --copy-files && yarn add:new",
+    "add:new": "git add dist/*",
     "test": "react-scripts test --env=jsdom",
     "coverage": "react-scripts test --env=jsdom --coverage --collectCoverageFrom=src/components/*.js",
     "eject": "react-scripts eject",
@@ -15,7 +16,14 @@
     "build-storybook": "build-storybook -s public",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
+  "pre-commit": [
+    "build:module"
+  ],
   "devDependencies": {
+    "@storybook/addon-actions": "^3.2.12",
+    "@storybook/addon-links": "^3.2.12",
+    "@storybook/react": "^3.2.12",
+    "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.0.3",
     "coveralls": "^3.0.0",
     "enzyme": "^3.1.0",
@@ -26,12 +34,10 @@
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "7.4.0",
     "gh-pages": "^1.0.0",
+    "pre-commit": "^1.2.2",
     "react-addons-test-utils": "15.6.2",
     "react-scripts": "1.0.14",
     "react-test-renderer": "16",
-    "@storybook/react": "^3.2.12",
-    "@storybook/addon-actions": "^3.2.12",
-    "@storybook/addon-links": "^3.2.12",
     "semantic-release": "^8.0.3"
   },
   "dependencies": {
