--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,7 @@
 {
   "parser": "babel-eslint",
-  "extends": "airbnb"
+  "extends": "airbnb",
+  "rules": {
+    "react/jsx-filename-extension": "off"
+  }
 }
